added restapi project

--- a/account/src/main/resources/templates/loginPage.html
+++ b/account/src/main/resources/templates/loginPage.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>login</title>
 </head>
 <body>
 <h1>This is LoginPage</h1>
+<form action="./login">
+    Enter Account ID : <input type="text" name="accountId">
+    Enter Password : <input type="password" name="password">
+    <input type="submit" value="Login">
+
+
+</form>
+<br><br>
+
+<h2 th:text="${message}" style="color: red"></h2>
 
 </body>
 </html>
