completed search book and list all book function in book project

--- a/bookspringweb/src/main/resources/templates/index.html
+++ b/bookspringweb/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Book Management System</h1>
-<a href="">List All Books</a><br><br>
-<a href="">Search Book By ID</a><br><br>
+<a href="./listAll">List All Books</a><br><br>
+<a href="./searchBookByIdPage">Search Book By ID</a><br><br>
 <a href="">Add New Book</a><br><br>
 <a href="">Delete Book</a><br><br>
 <a href="">Increment Copies</a><br><br>
