get everything updated

--- a/bookspringweb/src/main/resources/templates/Index.html
+++ b/bookspringweb/src/main/resources/templates/Index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <h1>Book Management System</h1>
+<hr>
 <a href="./listAll">List All Books</a><br><br>
 <a href="./searchBookByIdPage">Search Book By ID</a><br><br>
-<a href="">Add New Book</a><br><br>
+<a href="./addNewBookPage">Add New Book</a><br><br>
 <a href="">Delete Book</a><br><br>
 <a href="">Increment Copies</a><br><br>
 <a href="">Generate Description</a><br><br>
